--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
         }
         .actions {
             display: flex;
-            justify-content: space-between; /* Căn đều các nút */
+            justify-content: space-between;
             padding: 6px 0;
             font-size: 13px;
             color: #65676B;
@@ -530,8 +530,8 @@
             display: flex;
             align-items: center;
             gap: 6px;
-            flex: 1; /* Đảm bảo các nút có kích thước đều nhau */
-            justify-content: center; /* Căn giữa nội dung trong mỗi nút */
+            flex: 1;
+            justify-content: center;
         }
         .actions .action:hover {
             background: #F5F6F5;
