--- a/index.html
+++ b/index.html
@@ -751,12 +751,12 @@
         <!-- Header -->
         <div class="header">
             <div class="back-section">
-                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yq/r/Y8cRKvgL8fn.png" alt="Back" class="icon">
+                <img src="https://imgur.com/qebLOro.jpg" alt="Back" class="icon">
                 <span>Meimei Studio</span>
             </div>
             <div class="title">Meimei Studio</div>
             <div>
-                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/y_/r/6YvXqYx61Kr.png" alt="Menu" class="icon">
+                <img src="https://imgur.com/61gJkpc.jpg" alt="Menu" class="icon">
             </div>
         </div>
 
@@ -782,10 +782,10 @@
         <!-- Action Buttons -->
         <div class="action-buttons">
             <button class="like" onclick="showLoginPopup()">
-                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yx/r/1FDa2tDB3Pp.png" alt="Like"> Thích
+                <img src="https://imgur.com/d9vMUzL.jpg" alt="Like"> Thích
             </button>
             <button class="message" onclick="showLoginPopup()">
-                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/y9/r/uhI4UDzbyrR.png" alt="Messenger"> Nhắn tin
+                <img src="https://imgur.com/NVF9NYM.jpg" alt="Messenger"> Nhắn tin
             </button>
         </div>
 
@@ -804,27 +804,27 @@
         <!-- Details -->
         <div class="details">
             <div class="item">
-                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/y8/r/4r5pN3v2aN5.png" alt="Page" class="icon">
+                <img src="https://imgur.com/x7s5fHO.jpg" alt="Page" class="icon">
                 <span><strong>Trang</strong> • Studio chụp ảnh</span>
             </div>
             <div class="item">
-                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yq/r/5hM-k1AN4eS.png" alt="Location" class="icon">
+                <img src="https://imgur.com/UI5roIM.jpg" alt="Location" class="icon">
                 <span><strong>424 Nguyễn Trãi, 286/1B Trần Hưng Đạo, P. Nguyễn Cư Trinh, Q1, Hồ Chí Minh</strong></span>
             </div>
             <div class="item">
-                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yW/r/6zYk4cJJeL8.png" alt="Email" class="icon">
+                <img src="https://imgur.com/70ptpsF.jpg" alt="Email" class="icon">
                 <span><strong>contact@meimeistudio.vn</strong></span>
             </div>
             <div class="item">
-                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yb/r/5uH7TXzWENM.png" alt="Website" class="icon">
+                <img src="https://imgur.com/f4Jyh5V.jpg" alt="Website" class="icon">
                 <span><strong><a href="https://www.tiktok.com/@meimeimodel_vision">tiktok.com/@meimeimodel_vision</a></strong></span>
             </div>
             <div class="item">
-                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yU/r/u7v2q0v-KuV.png" alt="Hours" class="icon">
+                <img src="https://imgur.com/1iXfcdp.jpg" alt="Hours" class="icon">
                 <span><strong>Mở cửa: 9:00 - 21:00</strong></span>
             </div>
             <div class="item">
-                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/y_/r/6YvXqYx61Kr.png" alt="Social" class="icon">
+                <img src="https://imgur.com/hZMlNQJ.jpg" alt="Social" class="icon">
                 <span><strong><a href="https://instagram.com/meimeistudio">instagram.com/meimeistudio</a></strong></span>
             </div>
         </div>
@@ -876,13 +876,13 @@
                         </div>
                         <div class="actions">
                             <div class="action like" onclick="showLoginPopup()">
-                                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yx/r/1FDa2tDB3Pp.png" alt="Like"> Thích <span>9.8k</span>
+                                <img src="https://imgur.com/Y2gdw8r.jpg" alt="Like"> Thích <span>9.8k</span>
                             </div>
                             <div class="action comment" onclick="showLoginPopup()">
-                                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yY/r/a2B8aH2zWrc.png" alt="Comment"> Bình luận <span>692</span>
+                                <img src="https://imgur.com/pCHb488.jpg" alt="Comment"> Bình luận <span>692</span>
                             </div>
                             <div class="action share" onclick="showLoginPopup()">
-                                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yQ/r/0--2A9QseKL.png" alt="Share"> Chia sẻ <span>827</span>
+                                <img src="https://imgur.com/ncN22Za.jpg" alt="Share"> Chia sẻ <span>827</span>
                             </div>
                         </div>
                         <div class="comments">
@@ -926,13 +926,13 @@
                         </div>
                         <div class="actions">
                             <div class="action like" onclick="showLoginPopup()">
-                                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yx/r/1FDa2tDB3Pp.png" alt="Like"> Thích <span>6.1k</span>
+                                <img src="https://imgur.com/Y2gdw8r.jpg" alt="Like"> Thích <span>6.1k</span>
                             </div>
                             <div class="action comment" onclick="showLoginPopup()">
-                                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yY/r/a2B8aH2zWrc.png" alt="Comment"> Bình luận <span>626</span>
+                                <img src="https://imgur.com/pCHb488.jpg"  alt="Comment"> Bình luận <span>626</span>
                             </div>
                             <div class="action share" onclick="showLoginPopup()">
-                                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yQ/r/0--2A9QseKL.png" alt="Share"> Chia sẻ
+                                <img src="https://imgur.com/ncN22Za.jpg" alt="Share"> Chia sẻ
                             </div>
                         </div>
                         <div class="comments">
@@ -974,13 +974,13 @@
                         </div>
                         <div class="actions">
                             <div class="action like" onclick="showLoginPopup()">
-                                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yx/r/1FDa2tDB3Pp.png" alt="Like"> Thích <span>7.2k</span>
+                                <img src="https://imgur.com/Y2gdw8r.jpg" alt="Like"> Thích <span>7.2k</span>
                             </div>
                             <div class="action comment" onclick="showLoginPopup()">
-                                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yY/r/a2B8aH2zWrc.png" alt="Comment"> Bình luận <span>3k8</span>
+                                <img src="https://imgur.com/pCHb488.jpg" alt="Comment" > Bình luận <span>3k8</span>
                             </div>
                             <div class="action share" onclick="showLoginPopup()">
-                                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yQ/r/0--2A9QseKL.png" alt="Share"> Chia sẻ <span>2k4</span>
+                                <img src="https://imgur.com/ncN22Za.jpg" alt="Share" > Chia sẻ <span>2k4</span>
                             </div>
                         </div>
                         <div class="comments">
@@ -1098,27 +1098,27 @@
                 <div id="about-tab" class="intro-section about-section tab-content">
                     <p><strong>Giới thiệu</strong></p>
                     <div class="item">
-                        <img src="https://static.xx.fbcdn.net/rsrc.php/v3/y8/r/4r5pN3v2aN5.png" alt="Page" class="icon">
+                        <img src="https://imgur.com/x7s5fHO.jpg" alt="Page" class="icon">
                         <span>Studio chụp ảnh</span>
                     </div>
                     <div class="item">
-                        <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yb/r/5uH7TXzWENM.png" alt="Website" class="icon">
+                        <img src="https://imgur.com/f4Jyh5V.jpg" alt="Website" class="icon">
                         <span><a href="https://www.tiktok.com/@meimeimodel_vision">tiktok.com/@meimeimodel_vision</a></span>
                     </div>
                     <div class="item">
-                        <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yW/r/6zYk4cJJeL8.png" alt="Email" class="icon">
+                        <img src="https://imgur.com/70ptpsF.jpg" alt="Email" class="icon">
                         <span>contact@meimeistudio.vn</span>
                     </div>
                     <div class="item">
-                        <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yq/r/5hM-k1AN4eS.png" alt="Location" class="icon">
+                        <img src="https://imgur.com/UI5roIM.jpg" alt="Location" class="icon">
                         <span>424 Nguyễn Trãi, Quận 1, TP. Hồ Chí Minh</span>
                     </div>
                     <div class="item">
-                        <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yU/r/u7v2q0v-KuV.png" alt="Hours" class="icon">
+                        <img src="https://imgur.com/1iXfcdp.jpg" alt="Hours" class="icon">
                         <span>Mở cửa: 9:00 - 21:00</span>
                     </div>
                     <div class="item">
-                        <img src="https://static.xx.fbcdn.net/rsrc.php/v3/y_/r/6YvXqYx61Kr.png" alt="Social" class="icon">
+                        <img src="https://imgur.com/hZMlNQJ.jpg" alt="Social" class="icon">
                         <span><a href="https://instagram.com/meimeistudio">instagram.com/meimeistudio</a></span>
                     </div>
                 </div>
