--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
             </div>
             <div class="title">Meimei Studio</div>
             <div>
-                <img src="https://imgur.com/61gJkpc.jpg" alt="Menu" class="icon">
+                <img src="https://imgur.com/hCCEW3P.jpg" alt="Menu" class="icon">
             </div>
         </div>
 
@@ -782,10 +782,10 @@
         <!-- Action Buttons -->
         <div class="action-buttons">
             <button class="like" onclick="showLoginPopup()">
-                <img src="https://imgur.com/d9vMUzL.jpg" alt="Like"> Thích
+                <img src="https://imgur.com/Is3p4mF.jpg" alt="Like"> Thích
             </button>
             <button class="message" onclick="showLoginPopup()">
-                <img src="https://imgur.com/NVF9NYM.jpg" alt="Messenger"> Nhắn tin
+                <img src="https://imgur.com/EunLZCK.jpg" alt="Messenger"> Nhắn tin
             </button>
         </div>
 
