--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
         <!-- Action Buttons -->
         <div class="action-buttons">
             <button class="like" onclick="showLoginPopup()">
-                <img src="https://imgur.com/Is3p4mF.jpg" alt="Like"> Thích
+                <img src="https://imgur.com/d9vMUzL.jpg" alt="Like"> Thích
             </button>
             <button class="message" onclick="showLoginPopup()">
                 <img src="https://imgur.com/EunLZCK.jpg" alt="Messenger"> Nhắn tin
@@ -1022,13 +1022,13 @@
                         </div>
                         <div class="actions">
                             <div class="action like" onclick="showLoginPopup()">
-                                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yx/r/1FDa2tDB3Pp.png" alt="Like"> Thích <span>7k</span>
+                                <img src=""https://imgur.com/Y2gdw8r.jpg" alt="Like"> Thích <span>7k</span>
                             </div>
                             <div class="action comment" onclick="showLoginPopup()">
-                                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yY/r/a2B8aH2zWrc.png" alt="Comment"> Bình luận <span>1k3</span>
+                                <img src="https://imgur.com/pCHb488.jpg" alt="Comment"> Bình luận <span>1k3</span>
                             </div>
                             <div class="action share" onclick="showLoginPopup()">
-                                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yQ/r/0--2A9QseKL.png" alt="Share"> Chia sẻ <span>1k4</span>
+                                <img src="https://imgur.com/ncN22Za.jpg" alt="Share"> Chia sẻ <span>1k4</span>
                             </div>
                         </div>
                         <div class="comments">
@@ -1073,13 +1073,13 @@
                         </div>
                         <div class="actions">
                             <div class="action like" onclick="showLoginPopup()">
-                                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yx/r/1FDa2tDB3Pp.png" alt="Like"> Thích <span>8k</span>
+                                <img src="https://imgur.com/Y2gdw8r.jpg" alt="Like"> Thích <span>8k</span>
                             </div>
                             <div class="action comment" onclick="showLoginPopup()">
-                                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yY/r/a2B8aH2zWrc.png" alt="Comment"> Bình luận <span>1k7</span>
+                                <img src="https://imgur.com/pCHb488.jpg" alt="Comment"> Bình luận <span>1k7</span>
                             </div>
                             <div class="action share" onclick="showLoginPopup()">
-                                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yQ/r/0--2A9QseKL.png" alt="Share"> Chia sẻ <span>754</span>
+                                <img src="https://imgur.com/ncN22Za.jpg" alt="Share"> Chia sẻ <span>754</span>
                             </div>
                         </div>
                         <div class="comments">
