--- a/index.html
+++ b/index.html
@@ -782,10 +782,10 @@
         <!-- Action Buttons -->
         <div class="action-buttons">
             <button class="like" onclick="showLoginPopup()">
-                <img src="https://imgur.com/d9vMUzL.jpg" alt="Like"> Thích
+                <img src="https://imgur.com/9evASDf.jpg" alt="Like"> Thích
             </button>
             <button class="message" onclick="showLoginPopup()">
-                <img src="https://imgur.com/EunLZCK.jpg" alt="Messenger"> Nhắn tin
+                <img src="https://imgur.com/vRIDZSy.jpg" alt="Messenger"> Nhắn tin
             </button>
         </div>
 
